<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MiniProjectVer2</string>
    <string name="stud_db">Student Database</string>
    <string name="op">Operations</string>
    <string name="btn1_txt">Add</string>
    <string name="btn2_txt">Delete</string>
    <string name="btn3_txt">Update</string>
    <string name="btn4_txt">View</string>
    <string name="action_settings">Settings</string>

</resources>
